@@ -1,3 +1,8 @@
+2007-06-29  Scott Reeves <sreeves@novell.com> 
+
+	* src/Application.cs, src/Makefile.am: add start of popup status
+	  message. Patch from Travis Hansen
+
 2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* src/SendingHandler.cs, src/Makefile.am, src/TransferStatusArgs.cs,
